--- a/ssis_app/templates/home.html
+++ b/ssis_app/templates/home.html
@@ -34,22 +34,12 @@
     </ul>
 </div>
 
-<!-- <a href="{{ url_for('student.student_list') }}">
-    <div class="left-rectangle"></div>
-    <div class="student-title-text">STUDENT</div>
-    <div class="student-icon"><img src="{{ url_for('static', filename='images/STUDENT ICON.png') }}" width="300"></div>
-</a>
+<div class="navbar">
+    <p>HOME</p>
+</div>
 
-<a href="{{ url_for('college.college_list') }}">
-    <div class="right-rectangle college"></div>
-    <div class="college-title-text">COLLEGE</div>
-    <div class="college-icon"><img src="{{ url_for('static', filename='images/COLLEGE ICON.png') }}" width="230"></div>
-</a>
-
-<a href="{{ url_for('course.course_list') }}">
-    <div class="right-rectangle course"></div>
-    <div class="course-title-text">COURSE</div>
-    <div class="course-icon"><img src="{{ url_for('static', filename='images/COURSE ICON.png') }}" width="230"></div>
-</a> -->
+<div class="homepage-bg">
+    <img src="{{ url_for('static', filename='images/Home Page.png') }}">
+</div>
 
 {% endblock %}  
