--- a/ssis_app/templates/home.html
+++ b/ssis_app/templates/home.html
@@ -42,4 +42,8 @@
     <img src="{{ url_for('static', filename='images/Home Page.png') }}">
 </div>
 
+<!-- <div class="home-logo">
+    <img src="{{ url_for('static', filename='images/Student-Info Logo.png') }}">
+</div> -->
+
 {% endblock %}  
