--- a/ssis_app/templates/add_course.html
+++ b/ssis_app/templates/add_course.html
@@ -44,14 +44,14 @@
 </div>
 
 <!-- ADD COURSE FORM -->
-<form action="/course/add/" method="POST">
+<form action="/course/add/" method="POST" onsubmit="return validateForm()">
     {{ course_form.csrf_token }}
     <div class="inputBox code">
-        <input type="text" required="required" name="course_code">
+        <input type="text" required name="course_code" id="course_code">
         <span>CODE</span>
     </div>
     <div class="inputBox name">
-        <input type="text" required="required" name="course_name">
+        <input type="text" required name="course_name" id="course_name">
         <span>NAME</span>
     </div>
 
@@ -123,5 +123,27 @@
         </div>
     </div>
 {% endif %}
+
+<script>
+    function validateForm() {
+        var codeInput = document.getElementById("course_code");
+        var nameInput = document.getElementById("course_name");
+        
+        var codeLength = codeInput.value.length;
+        var nameLength = nameInput.value.length;
+
+        if (codeLength < 4 || codeLength > 20) {
+            alert("Course code should be between 4 and 20 characters.");
+            return false;
+        }
+
+        if (nameLength < 10 || nameLength > 100) {
+            alert("Course name should be between 10 and 100 characters.");
+            return false;
+        }
+
+        return true;
+    }
+</script>
 
 {% endblock %}  
