Minor changes in HTML file.

--- a/ssis_app/templates/home.html
+++ b/ssis_app/templates/home.html
@@ -38,9 +38,9 @@
     <p>HOME</p>
 </div>
 
-<div class="homepage-bg">
+<!-- <div class="homepage-bg">
     <img src="{{ url_for('static', filename='images/Home Page.png') }}">
-</div>
+</div> -->
 
 <!-- <div class="home-logo">
     <img src="{{ url_for('static', filename='images/Student-Info Logo.png') }}">
